--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,6 +20,13 @@ body{
 h1{
   font-family: amerika;
   color: white;
+  font-size: 40px;
+  text-align: center;
+}
+
+h2{
+  font-family: amerika;
+  color: white;
   font-size: 35px;
   text-align: center;
 }
