ajustes, começo da adição da foto

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -45,3 +45,10 @@ label{
   font-family: verdana;
   font-size: 15px;
 }
+
+.rfoto{
+  border-color: mediumseagreen;
+  border-width: 2px;
+  border-style: solid;
+  margin: auto;
+}
